# dlq

./: .gitignore  README.md  current.md  docker-compose.yml  justfile  publish.sh
.cargo/: config.toml
.config/: nextest.toml
.cursor/rules/: tests.mdc
.github/workflows/: ci.yml
crates/dlq-cli/: Cargo.toml  README.md
crates/dlq-cli/src/: database.rs  main.rs  reader.rs  send.rs  test.rs
crates/dlq-core/: Cargo.toml
crates/dlq-core/src/: lib.rs  send.rs  sqs.rs  test_utils.rs
crates/dlq-core/tests/: send.proptest-regressions  send.rs
crates/dlq-core/tests/common/: mod.rs
docs/: QUICKSTART.md  TESTING.md
scripts/: dev.nu  examples.nu
