[package]
name = "dlq"
authors = ["Isaac Adams"]
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "a CLI tool for polling the messages from your AWS DLQ instance"
repository = "https://github.com/isaacadams/dlq"

[[bin]]
name = "dlq"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "parking_lot"]}
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1"
anyhow = "1.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
dlq-core = { version = "0.1.1", path = "../dlq-core" }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11.6", features = ["localstack"] }
