[package]
name = "dlq"
authors = ["Isaac Adams"]
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "a CLI tool for polling the messages from your AWS DLQ instance"
repository = "https://github.com/isaacadams/dlq"

[[bin]]
name = "dlq"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "parking_lot"]}
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dlq-core = { version = "1.0.0", path = "../dlq-core" }
pumps = "0.1"
uuid = { version = "1.18", features = ["v4"] }
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
indicatif = "0.18"
async-channel = "2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["localstack"] }
tokio-test = "0.4.4"
