[package]
name = "dlq-core"
authors = ["Isaac Adams"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "easily poll messages from your AWS DLQ instance"

[lib]
name = "dlq"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "parking_lot"]}
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1"
anyhow = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "macros", "runtime-tokio-rustls"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
